added open graph meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <meta name="description" content="Little Lemon is a family owned Mediterranean restaurant"/>
+  <meta name="og:title" content="Little Lemon web application"/>
+  <meta name="og:description" content="Little Lemon is a family owned Mediterranean restaurant"/>
+  <meta name="og:image" content={Logo}/>
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
