--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
   
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Little Lemon</title>
-  <!-- Added CSS for responsive website, update if necessary. Flex or Grid? -->
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
   <div id="root">
 </body>
 
